# jarvis-os

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  JARVIS-OS.md  flake.nix  jarvis-os-spec-v0.2.docx.md  result
arch/: README.md  install-qml.sh  install.sh  update.sh
arch/configs/hyprland/: general.conf  jarvis-os.conf  keybinds.conf
arch/configs/pipewire/: echo-cancel.conf
arch/scripts/: jarvis-chat  test-f4-asus.sh
arch/systemd-user/: ironclaw.service  jarvis-mcp-register.service  jarvis-ui-bridge.service  jarvis-ui.service  jarvis-voice-daemon.service
arch/templates/: ironclaw.env
crates/ironclaw_common/src/: event.rs
crates/jarvis_linux_mcp/: Cargo.toml
crates/jarvis_linux_mcp/src/: error.rs  lib.rs  mcp_server.rs  tool.rs
crates/jarvis_linux_mcp/src/adapter/: mod.rs  polkit.rs
crates/jarvis_linux_mcp/src/tools/: btrfs_snapshot.rs  file_read_safe.rs  journal_query.rs  mod.rs  network_status.rs  policy_evaluate.rs  polkit_check.rs  process_list.rs  systemd_status.rs
crates/jarvis_policies/: Cargo.toml
crates/jarvis_policies/src/: action.rs  adapter.rs  decision.rs  lib.rs  policy.rs
crates/jarvis_system_tools/: Cargo.toml
crates/jarvis_system_tools/src/: error.rs  lib.rs
crates/jarvis_system_tools/src/adapter/: btrfs.rs  journal.rs  mod.rs  network.rs  polkit.rs  process.rs  systemd.rs
crates/jarvis_system_tools/src/tools/: btrfs_snapshot.rs  journal_query.rs  mod.rs  network_status.rs  policy_evaluate.rs  polkit_check.rs  process_list.rs  systemd_unit_status.rs
crates/jarvis_ui_bridge/: Cargo.toml
crates/jarvis_ui_bridge/src/: config.rs  gateway.rs  main.rs  socket.rs
crates/jarvis_voice/: Cargo.toml
crates/jarvis_voice/src/: config.rs  engine.rs  error.rs  lib.rs  orchestrator.rs  spawn.rs  types.rs
crates/jarvis_voice/src/audio_io/: mod.rs
crates/jarvis_voice/src/elevenlabs/: mod.rs
crates/jarvis_voice_daemon/: Cargo.toml
crates/jarvis_voice_daemon/src/: audio.rs  audio_analysis.rs  config.rs  ipc_publisher.rs  main.rs  orchestrator.rs  protocol.rs  ws_client.rs
docs/superpowers/plans/: 2026-04-30-jarvis-os-v0.3-ui-architecture.md  2026-05-01-jarvis-os-local-ipc.md  2026-05-03-jarvis-voice-in-process-impl.md
docs/superpowers/specs/: 2026-04-29-jarvis-os-extension-layer-design.md  2026-04-30-jarvis-os-local-ipc-design.md  2026-04-30-jarvis-os-v0.3-ui-architecture-design.md  2026-05-02-jarvis-voice-in-process-design.md
docs/superpowers/specs/archived/: 2026-04-29-jarvis-os-extension-layer-design.md
legacy/nixos/: desktop.nix  iso.nix  laptop-asus.nix
nixos/: imac-2014.nix
scripts/: smoke-local-ipc.sh
src/: app.rs  lib.rs  main.rs
src/agent/: agent_loop.rs  scheduler.rs
src/audio/: analysis.rs  mod.rs  pipeline.rs  tts.rs  types.rs
src/audio/backends/: elevenlabs_ipc.rs  elevenlabs_local.rs  mod.rs  none.rs
src/auth/: mod.rs  oauth.rs
src/bridge/: router.rs
src/channels/: channel.rs  manager.rs  mod.rs
src/channels/local_ipc/: channel_impl.rs  client.rs  control.rs  error.rs  mod.rs  protocol.rs  socket.rs
src/channels/web/: log_layer.rs  mod.rs  test_helpers.rs
src/channels/web/features/oauth/: mod.rs
src/channels/web/features/settings/: mod.rs
src/channels/web/handlers/: memory.rs
src/channels/web/platform/: mod.rs  sse.rs  state.rs  ws.rs
src/channels/web/tests/: multi_tenant.rs  tool_event_passthrough.rs
src/config/: audio.rs  channels.rs  mod.rs
src/events/: event_bus.rs  mod.rs
src/extensions/: manager.rs
src/setup/: wizard.rs
src/tools/: registry.rs
src/tools/builtin/: mod.rs  plan.rs
src/tools/builtin/jarvis_system/: btrfs_snapshot.rs  journal_query.rs  mod.rs  network_status.rs  policy_evaluate.rs  polkit_check.rs  process_list.rs  systemd_unit_status.rs
src/tunnel/: mod.rs
src/worker/: job.rs
tests/: jarvis_system_policy_gate.rs  local_ipc_integration.rs  multi_tenant_integration.rs  oauth_greeting_integration.rs  openai_compat_integration.rs  ws_gateway_integration.rs
tests/support/: gateway_workflow_harness.rs
ui/jarvis-os/: README.md  shell.qml
ui/jarvis-os/components/: EventLine.qml  PanelFrame.qml  ProgressBar.qml
ui/jarvis-os/core/: EventBus.qml  Hotkeys.qml  IronclawRest.qml  qmldir
ui/jarvis-os/scripts/: jarvis-ui-toggle.sh
ui/jarvis-os/surfaces/: EventsStreamWidget.qml  Ring.qml  ThreadCostWidget.qml  ToolsActiveWidget.qml
ui/jarvis-os/theme/: Palette.qml
voice_daemon/: README.md  pyproject.toml
voice_daemon/scripts/: run.sh  setup.sh
voice_daemon/voice_daemon/: __init__.py  audio_capture.py  main.py  server.py  stt.py  tts.py  vad.py  wakeword.py
