[package]
name = "jarvis_linux_mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Linux MCP server for jarvis-os: exposes systemd, polkit, D-Bus, btrfs as MCP tools (host-trusted, sin sandbox WASM)"
authors = ["Horelvis Castillo Mendoza"]
license = "MIT OR Apache-2.0"

[dependencies]
ironclaw_safety = { path = "../ironclaw_safety" }
jarvis_policies = { path = "../jarvis_policies" }

# zbus 4 con runtime tokio (default es async-io). Coincide con la versión
# que IronClaw ya usa en el workspace, así que cargo no duplica builds.
zbus = { version = "4", default-features = false, features = ["tokio"] }

tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "io-util",
  "io-std",        # tokio::io::stdin/stdout para MCP server stdio
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"

# Para sellos de tiempo en ActionContext (policy.evaluate).
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Enumeración de procesos vía /proc (lectura standard de Linux).
# eBPF/netlink no aplica para ENUMERAR, solo para EVENTOS (cn_proc).
# La lectura de /proc no pasa por ningún user-space middleware: kernel
# expone el VFS directamente, así que respeta el principio kernel-level.
procfs = "0.17"

clap = { version = "4", features = ["derive"] }

[[bin]]
name = "jarvis-linux-mcp"
path = "src/bin/main.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
