[package]
name = "jarvis_ui_bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Bridge daemon between IronClaw gateway WS and the jarvis-os QML UI via UNIX socket. Absorbs auth/port concerns so the orb is config-free."
authors = ["Horelvis Castillo Mendoza"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-util",
    "net",
    "fs",
    "signal",
    "time",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "jarvis-ui-bridge"
path = "src/main.rs"
