[package]
name = "jarvis_voice"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "jarvis-os voice engine: ElevenLabs Conversational AI client in-process (audio + WS + AEC)"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
