[package]
name = "jarvis_voice"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "jarvis-os voice engine: ElevenLabs Conversational AI client in-process (audio + WS + AEC)"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"

# Audio I/O (B2)
cpal = "0.15"
ringbuf = "0.4"

# WebSocket client (B2)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
